--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -15,7 +15,7 @@ header {
             margin-left: 10px;
 
             .logo {
-                
+                width: 300px;
                 display: inline-block;
             }
 
