--- a/css/estilos.css
+++ b/css/estilos.css
@@ -138,7 +138,7 @@ header nav {
   background: white;
   background: linear-gradient(180deg, white 0%, rgba(10, 6, 22, 0.779149) 20%, black 50%, rgba(10, 6, 22, 0.793155) 80%, white 100%); }
   .hero .container-1 .presentacion__parrafo .welcome {
-    color: black;
+    color: #ffd500;
     font-family: 'Inter', sans-serif;
     font-weight: 900; }
   .hero .container-1 .presentacion__parrafo p {
