--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -41,7 +41,7 @@
 
         .presentacion__parrafo {
             .welcome {
-                color: black;
+                color: $secondary-color;
                 font-family: 'Inter', sans-serif;
                 font-weight: 900;
             }
