--- a/css/estilos.css
+++ b/css/estilos.css
@@ -319,11 +319,11 @@ header nav {
     .contacto_css .contact_form .formulario h3 {
       font-size: 16px;
       padding-bottom: 30px;
-      color: #680aff; }
+      color: #ffffff; }
     .contacto_css .contact_form .formulario p {
       font-size: 20px;
       font-weight: 600;
-      color: #680aff; }
+      color: #ffffff; }
     .contacto_css .contact_form .aviso {
       font-size: 13px;
       color: #ffffff; }
