--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -278,13 +278,13 @@
             h3 {
                 font-size: 16px;
                 padding-bottom: 30px;
-                color: #680aff;
+                color: $primary-color;
             }
 
             p {
                 font-size: 20px;
                 font-weight: 600;
-                color: #680aff;
+                color: $primary-color;
             }
 
             }
