--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -1,5 +1,6 @@
 .hero {
 
+
     .novedad {
         text-align: center;
         font-family: 'Inter', sans-serif;
@@ -11,7 +12,7 @@
         align-items: center;
         flex-wrap: wrap;
         overflow-x: hidden;
-        
+
 
         h3 {
             @extend %flex;
@@ -21,7 +22,7 @@
             font-weight: bold;
             font-style: italic;
             flex-wrap: wrap;
-            
+
 
 
 
@@ -33,7 +34,7 @@
             padding: 15px;
             border-radius: 20px;
             text-decoration: none;
-            
+
         }
     }
 
@@ -97,9 +98,9 @@
         width: 18rem;
         margin-bottom: 20px;
         text-align: center;
-        box-shadow: 10px 10px 31px -8px rgba(0, 0, 0, 0.75);
-        -webkit-box-shadow: 10px 10px 31px -8px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: 10px 10px 31px -8px rgba(0, 0, 0, 0.75);
+        box-shadow: 10px 10px 31px -8px rgba(151, 151, 151, 0.76);
+        -webkit-box-shadow: 10px 10px 31px -8px rgba(131, 130, 130, 0.75);
+        -moz-box-shadow: 10px 10px 31px -8px rgba(141, 141, 141, 0.75);
 
         .card-img-top {
             height: 230px;
@@ -137,7 +138,7 @@
     ul {
         @include flex(flex, space-around, center);
         list-style: none;
-        
+
 
         img {
             width: 100px;
@@ -173,43 +174,34 @@
 
 /** PAGE NOSOTROS **/
 
-.nosotros {
+.titulo{
+    @extend %flex;
+}
 
-    font-family: 'Inter', sans-serif;
-    font-size: 20px;
-    display: flex;
-    background-size: auto;
-    background-position: center;
-    background-repeat: no-repeat;
-    align-items: start;
-
-    .titulo,
-    .parrafo {
-        flex: 1;
-        font-weight: bolder;
-        text-align: center;
+.imagen-nosotros {
+    .parrafo{
+        color: $color-letra-titulo;
         font-family: 'Inter', sans-serif;
-        color: black;
-        font-size: 20px;
-        padding: 20px;
-
+        text-align: left;
+        
     }
-
-    .titulo {
-        font-weight: bold;
-
-    }
-
-    .parrafo {
-        font-weight: normal;
-
-    }
+    flex: 1;
+    text-align: right;
+    padding: 20px;
+    overflow-x: hidden;
+    @include img-styles;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-sizing: border-box;
+    margin-bottom: 40px;
 }
 
 .mapa {
     @extend %flex;
 
 }
+
 
 /** PAGE CONTACTO **/
 
@@ -273,7 +265,7 @@
             }
 
             h1 {
-                font-family:'Inter', sans-serif;
+                font-family: 'Inter', sans-serif;
                 font-size: nth($font-size, 5);
                 text-align: center;
                 padding-bottom: 20px;
@@ -292,26 +284,26 @@
                 color: $primary-color;
             }
 
-            }
+        }
 
-            .aviso {
-                font-size: 13px;
-                color: #ffffff;
-
-            }
-
-            ::placeholder {
-                color: #a8a8a8;
-            }
-
-            input:focus,
-            textarea:focus {
-                outline: 0;
-                border: 1px solid #97d848;
-            }
+        .aviso {
+            font-size: 13px;
+            color: #ffffff;
 
         }
+
+        ::placeholder {
+            color: #a8a8a8;
+        }
+
+        input:focus,
+        textarea:focus {
+            outline: 0;
+            border: 1px solid #97d848;
+        }
+
     }
+}
 
 
 /** LOGIN **/
@@ -416,4 +408,8 @@
             }
         }
     }
+
+
+
+
 }
