--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -50,9 +50,13 @@ body {
 }
 
 .main-productos-abajo {
-
+    
     background-color: black;
     padding: 30px;
+    p{
+        color: white;
+        text-align: center;
+    }
 }
 
 span {
