--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -85,17 +85,19 @@
 /** PAGE NOSOTROS **/
 
 
-@media (min-width: 768px) {
+@media (min-width: 768px ) {
 
     .nosotros {
         flex-direction: row;
         justify-content: center;
+        align-items: center;
+        align-content: center;
     }
 
     .titulo,
     .parrafo {
         flex: 1;
-        padding: 22px;
+        padding: 29px;
         display: flex;
         align-items:initial;
     }
@@ -105,14 +107,14 @@
     }
 }
 
-@media (max-width: 990px) {
-    .nosotros {
-        flex-direction: column;
-        align-items: center;
+@media  screen and (max-width: 1330px) {
+    .imagen-nosotros {
+       display: flex;
+       flex-direction: column;
+       align-items: center;
     }
-
-    .titulo,
+ 
     .parrafo {
-        padding: 20px;
+       margin-top: 20px;
     }
-}
+ }
