--- a/css/estilos.css
+++ b/css/estilos.css
@@ -283,7 +283,8 @@ header nav {
   font-family: 'Inter', sans-serif;
   text-align: left;
   flex-wrap: wrap;
-  font-size: 20px; }
+  font-size: 20px;
+  padding: 10px; }
 
 /** PAGE CONTACTO **/
 .contacto_css {
